syntax = "proto3";

package sysclient;

option go_package = "./sysclient";

// 用户登录请求
message LoginRequest {
  string username = 1;  // 用户名
  string password = 2;  // 密码
  string ip_address = 3;  // IP地址
  string os = 4; // 操作系统
  string browser = 5; // 浏览器
}

// 用户登录响应
message LoginResponse {
  int64 id = 1;           // 用户ID
  string username = 2;    // 用户名
  string token = 3;       // JWT令牌
  string refresh_token = 4; // 刷新令牌
}

// 刷新令牌请求
message RefreshTokenRequest {
  string refresh_token = 1; // 刷新令牌
}

// 刷新令牌响应
message RefreshTokenResponse {
  string token = 1;       // 新的JWT令牌
  string refresh_token = 2; // 新的刷新令牌
}

message RegisterRequest {
  string username = 1;  // 用户名
  string password = 2;  // 密码
  string ip_address = 3;  // IP地址
  string email = 5; // 邮箱
  string mobile = 6; // 手机号
  string real_name = 7; // 真实姓名
  int32 gender = 8; // 性别
  string avatar = 9; // 头像
  string os = 10;
  string browser = 11;
}

message RegisterResponse {
  int64 id = 1;           // 用户ID
  string username = 2;    // 用户名
  string token = 3;       // JWT令牌
  string refresh_token = 4; // 刷新令牌
}

// 认证服务
service AuthService {
  // 注册
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);

  // 刷新令牌
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

// ========== 通用消息类型 ==========

message Empty {}
message Int64Value {
  int64 value = 1;
}

// 分页请求
message PageRequest {
  int32 page = 1;        // 页码，从1开始
  int32 page_size = 2;   // 每页大小
  string keyword = 3;    // 搜索关键字
}

// 分页响应
message PageResponse {
  int32 total = 1;       // 总记录数
  int32 page = 2;        // 当前页码
  int32 page_size = 3;   // 每页大小
  int32 total_page = 4;  // 总页数
}




// 添加系统操作日志表
message OperateLog {
  int64 id = 1; //编号
  string title = 2; //系统模块
  string operation_type = 3; //操作类型
  string operation_name = 4; //操作人员
  string request_method = 5; //请求方式
  string operation_url = 6; //操作方法
  string operation_params = 7; //请求参数
  string operation_response = 8; //响应参数
  int32 operation_status = 9; //操作状态
  int64 use_time = 10; //执行时长(毫秒)
  string browser = 11; //浏览器
  string os = 12; //操作信息
  string operation_ip = 13; //操作地址
  string operation_time = 14; //操作时间
}

message AddOperateLogReq {
  string title = 1; //系统模块
  string operation_type = 2; //操作类型
  string operation_name = 3; //操作人员
  string request_method = 4; //请求方式
  string operation_url = 5; //操作方法
  string operation_params = 6; //请求参数
  string operation_response = 7; //响应参数
  int32 operation_status = 8; //操作状态
  int64 use_time = 9;
  string browser = 10;
  string os = 11;
  string operation_ip = 12;
  string operation_time = 13;
}

message AddOperateLogResp {
  string pong = 1;
}

// 删除系统操作日志表
message DeleteOperateLogReq {
  repeated int64 ids = 1;
}

message DeleteOperateLogResp {
  string pong = 1;
}

// 查询系统操作日志表详情
message QueryOperateLogDetailReq {
  int64 id = 1;
}

// 分页查询系统操作日志表列表
message QueryOperateLogListReq {
  PageRequest page_request = 1;
  string operation_ip = 2; //操作地址
  string operation_name = 3; //操作人员
  int32 operation_status = 4; //操作状态
  string operation_type = 5; //操作类型
  string operation_url = 6; //操作方法
  string title = 7; //系统模块
  string os = 8; //操作系统信息
  string browser = 9; //浏览器
  string request_method = 10; //请求方式
}

message OperateLogListData {
    PageResponse page_response = 1;
    repeated OperateLog data = 2;
}

// 系统操作日志表
service OperateLogService {
  // 添加系统操作日志表
  rpc AddOperateLog(AddOperateLogReq) returns (AddOperateLogResp){}
  // 删除系统操作日志表
  rpc DeleteOperateLog(DeleteOperateLogReq) returns (DeleteOperateLogResp){}
  // 查询系统操作日志表详情
  rpc QueryOperateLogDetail(QueryOperateLogDetailReq) returns (OperateLog){}
  // 查询系统操作日志表列表
  rpc QueryOperateLogList(QueryOperateLogListReq) returns (OperateLogListData){}
}




// 角色信息
message Role {
  int64 role_id = 1;      // 角色ID
  string role_name = 2;   // 角色名称
  string role_code = 3;   // 角色编码
  string description = 4; // 角色描述
  int32 status = 5;    // 状态（0-禁用，1-正常）
}

message RoleScope {
  int64 id = 1;
  string role_code = 2;
  string scope_code = 3;
  repeated string perms = 4;
}

message RoleScopeInfo {
  Scope scope = 1;
  repeated string perms = 2;
}

message RoleInfo {
  Role role = 1;
  repeated RoleScopeInfo scopes = 2;
}


// 角色列表请求
message RoleListRequest {
  PageRequest page_request = 1;
  int32 status = 2;       // 状态过滤
}

// 角色列表响应
message RoleListResponse {
  PageResponse page_response = 1;
  repeated Role roles = 2;
}


// 创建角色请求
message CreateRoleRequest {
  string role_name = 1;   // 角色名称
  string role_code = 2;   // 角色编码
  string description = 3; // 角色描述
  int32 status = 4;       // 状态 (0-禁用, 1-正常)
  int64 operator_id = 5;  // 操作者
}

// 更新角色请求
message UpdateRoleRequest {
  string role_name = 1;   // 角色名称
  string role_code = 2;   // 角色编码
  string description = 3; // 角色描述
  int32 status = 4;       // 状态 (0-禁用, 1-正常)
  int64 operator_id = 5;  // 操作者
}

// 删除角色请求
message DeleteRoleRequest {
  string role_code = 1;    // 角色编码
  int64 operator_id = 2;  // 操作者
}

message AddRolePermsRequest {
  string role_code = 1;   // 角色code
  int64 operator_id = 2;  // 操作者
  repeated RoleScope role_scopes = 3;
}

message UpdateRolePermsRequest {
  string role_code = 1;   // 角色code
  int64 operator_id = 2;  // 操作者
  repeated RoleScope role_scopes = 3;
}

message DeleteRolePermsRequest {
  string role_code = 1;   // 角色code
  int64 operator_id = 2;  // 操作者
  repeated string scope_codes = 3;
}

// 启用/禁用角色请求
message ToggleRoleStatusRequest {
  string role_code = 1;
  int32 status = 2;          // 目标状态: 0=禁用, 1=启用
  int64 operator_id = 3;
}

// 批量删除角色
message BatchDeleteRolesRequest {
  repeated string role_codes = 1;
  int64 operator_id = 2;
}

message GetRoleByRoleCodesRequest {
  repeated string role_codes = 1;
}

message GetRoleByRoleCodesResponse {
  repeated Role roles = 1;
}

message GetRolePermsRequest {
  string role_code = 1;
}

service RoleService {
  // 角色列表
  rpc GetRoleList(RoleListRequest) returns (RoleListResponse);
  // 创建角色
  rpc CreateRole(CreateRoleRequest) returns (Role);
  // 更新角色
  rpc UpdateRole(UpdateRoleRequest) returns (Role);
  // 禁用角色
  rpc ToggleRoleStatus(ToggleRoleStatusRequest) returns (Role);
  // 删除角色
  rpc DeleteRole(DeleteRoleRequest) returns (Empty);
  rpc BatchDeleteRoles(BatchDeleteRolesRequest) returns (Empty);
  // 添加角色权限
  rpc AddRolePerms(AddRolePermsRequest) returns (RoleInfo);
  // 更新角色权限
  rpc UpdateRolePerms(UpdateRolePermsRequest) returns (RoleInfo);
  // 删除角色权限
  rpc DeleteRolePerms(DeleteRolePermsRequest) returns (RoleInfo);
  // 获取角色权限
  rpc GetRolePerms(GetRolePermsRequest) returns (RoleInfo);
  // 获取角色列表
  rpc GetRoleListByRoleIDs(GetRoleByRoleCodesRequest) returns (GetRoleByRoleCodesResponse);
}




// 菜单信息
message Menu {
  int64 id = 1;                 // 菜单ID
  int64 parent_id = 2;          // 父菜单ID
  string menu_name = 3;         // 菜单名称
  string menu_type = 4;         // 菜单类型 (M-目录, C-菜单, F-按钮)
  string path = 5;              // 路由路径
  string component = 6;         // 组件路径
  string redirect = 7;          // 重定向路径
  string icon = 8;              // 菜单图标
  int32 sort = 9;               // 排序
  bool no_cache = 10;           // 是否缓存
  bool affix = 11;              // 是否固定在标签栏
  bool external = 12;           // 是否外部链接
  bool hidden = 13;             // 是否隐藏
  int32 status = 14;            // 状态 (0-禁用, 1-正常)
  int64 scope_id = 15;          // 权限范围ID
  string remark = 16;           // 备注
  repeated Menu children = 17;
  repeated string perms = 18;
}


// ========== 菜单管理 ==========

// 菜单列表请求
message MenuListRequest {
  bool with_button = 1;   // 是否包含按钮
  int32 status = 2;       // 状态过滤
}

// 菜单列表响应 (树形结构)
message MenuTreeResponse {
  repeated Menu menus = 1;
}

// 创建菜单请求
message CreateMenuRequest {
  Menu menu = 1;
  int64 operator_id = 2;
}

// 更新菜单请求
message UpdateMenuRequest {
  Menu menu = 1;
  int64 operator_id = 2;
}

// 删除菜单请求
message DeleteMenuRequest {
  int64 id = 1;           // 菜单ID
  int64 operator_id = 2;
}

// ========== 安全范围管理 ==========


message Scope {
  int64 id = 1;           // 范围ID
  string scope_name = 2;  // 范围名称
  string scope_code = 3;  // 范围编码
  string description = 4; // 范围描述
  int32 sort = 5;         // 排序
}


message ScopeInfo {
  Scope scope = 1;
  repeated Menu menus = 2; // 菜单
}


// 安全范围列表请求
message ScopeListRequest {
  PageRequest page_request = 1;
}

// 安全范围列表响应
message ScopeListResponse {
  PageResponse page_response = 1;
  repeated ScopeInfo scopes = 2;
}

// 创建安全范围请求
message CreateScopeRequest {
  string scope_name = 1;  // 范围名称
  string scope_code = 2;  // 范围编码
  string description = 3; // 范围描述
  int32 sort = 4;         // 排序
  repeated int64 menu_ids = 5; // 菜单ID
  int64 operator_id = 6;  // 操作者
}

// 更新安全范围请求
message UpdateScopeRequest {
  int64 id = 1;           // 范围ID
  string scope_name = 2;  // 范围名称
  string scope_code = 3;  // 范围编码
  string description = 4; // 范围描述
  int32 sort = 5;         // 排序
  int64 operator_id = 6;  // 操作者
}

// 删除安全范围请求
message DeleteScopeRequest {
  int64 id = 1;           // 范围ID
  int64 operator_id = 2;  // 操作者
}

// 添加安全范围菜单请求
message AddScopeMenusRequest {
  int64 scope_id = 1;
  repeated int64 menu_ids = 2;
  int64 operator_id = 3;
}

// 删除安全范围菜单请求
message DeleteScopeMenusRequest {
  int64 scope_id = 1;
  repeated int64 menu_ids = 2;
  int64 operator_id = 3;
  bool delete_all = 4;
}


service ScopeService {
  // 安全范围管理
  rpc GetScopeList(ScopeListRequest) returns (ScopeListResponse);
  rpc GetScopeById(Int64Value) returns (Scope);
  rpc CreateScope(CreateScopeRequest) returns (Scope);
  rpc UpdateScope(UpdateScopeRequest) returns (Scope);
  rpc DeleteScope(DeleteScopeRequest) returns (Empty);
  rpc AddScopeMenus(AddScopeMenusRequest) returns (ScopeInfo);
  rpc DeleteScopeMenus(DeleteScopeMenusRequest) returns (ScopeInfo);
  rpc GetScopeMenus(Int64Value) returns (ScopeInfo);
  // 菜单管理
  rpc GetMenuTree(MenuListRequest) returns (MenuTreeResponse);
  rpc GetMenuById(Int64Value) returns (Menu);
  rpc CreateMenu(CreateMenuRequest) returns (Menu);
  rpc UpdateMenu(UpdateMenuRequest) returns (Menu);
  rpc DeleteMenu(DeleteMenuRequest) returns (Empty);
}






/// 用户列表请求
message UserListRequest {
  PageRequest page_request = 1;
  int32 status = 2;       // 状态过滤
}

// 用户列表响应
message UserListResponse {
  PageResponse page_response = 1;
  repeated User users = 2;
}

// 获取当前用户信息请求
message GetUserInfoRequest {
  int64 user_id = 1;
}

// 创建用户请求
message CreateUserRequest {
  string username = 1;    // 用户名
  string password = 2;    // 密码
  string email = 3;       // 邮箱
  string mobile = 4;      // 手机号
  string real_name = 5;   // 真实姓名
  int32 gender = 6;       // 性别 (0-未知, 1-男, 2-女)
  int32 status = 7;       // 状态 (0-禁用, 1-正常)
  repeated int64 role_ids = 8; // 角色ID列表
  int64 operator_id = 9;  // 操作者
}

// 更新用户请求
message UpdateUserRequest {
  int64 id = 1;           // 用户ID
  string email = 2;       // 邮箱
  string mobile = 3;      // 手机号
  string real_name = 4;   // 真实姓名
  int32 gender = 5;       // 性别 (0-未知, 1-男, 2-女)
  string avatar = 6;      // 头像URL
  int64 operator_id = 7;  // 操作者
}

// 删除用户请求
message DeleteUserRequest {
  int64 id = 1;           // 用户ID
  int64 operator_id = 2;  // 操作者
}

// 更新用户密码请求
message UpdateUserPasswordRequest {
  int64 user_id = 1;      // 用户ID
  string old_password = 2; // 旧密码
  string new_password = 3; // 新密码
  int64 operator_id = 4;  // 操作者
}

// 分配用户角色
message AssignUserRoleRequest {
  int64 user_id = 1;
  repeated string role_codes = 2;
  int64 operator_id = 3;
}


// 用户信息
message UserInfo {
  int64 id = 1;           // 用户ID
  string username = 2;    // 用户名
  string email = 3;       // 邮箱
  string mobile = 4;      // 手机号
  string real_name = 5;   // 真实姓名
  int32 gender = 6;       // 性别 (0-未知, 1-男, 2-女)
  int32 status = 7;       // 状态 (0-禁用, 1-正常)
  repeated Role roles = 8; // 角色列表
  repeated Menu menu_tree = 9; // 菜单列表
  string avatar = 10; // 头像
}

message ToggleUserStatusRequest {
  int64 user_id = 1;
  int32 status = 2;
  int64 operator_id = 3;
}

message User {
  int64 id = 1;           // 用户ID
  string username = 2;    // 用户名
  string email = 3;       // 邮箱
  string mobile = 4;      // 手机号
  string real_name = 5;   // 真实姓名
  int32 gender = 6;       // 性别 (0-未知, 1-男, 2-女)
  int32 status = 7;       // 状态 (0-禁用, 1-正常)
  string avatar = 8;     // 头像
}


service UserService {
  // 用户管理
  rpc GetUserList(UserListRequest) returns (UserListResponse);
  rpc GetUserById(Int64Value) returns (UserInfo);
  rpc CreateUser(CreateUserRequest) returns (UserInfo);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (Empty);
  rpc UpdateUserPassword(UpdateUserPasswordRequest) returns (Empty);
  rpc AssignUserRole(AssignUserRoleRequest) returns (Empty);
  rpc ToggleUserStatus(ToggleUserStatusRequest) returns (User);  // 禁用/启用用户
  // 获取当前用户信息
  rpc GetUserInfo(GetUserInfoRequest) returns (UserInfo);
}

